--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section class="media" id="music">
 	  <h2>MUSIC</h2>
 	<div class="youtube">
-		<iframe src="https://www.youtube.com/embed/UyK2hTh3nlw?si=wsSat0RL03ywCxfr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/m1A_1iB8FFg?si=OuQuVqzKaCp4MbVP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -95,15 +95,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACE</p>
-				<p class="member_item_birth">BIRTH  11.6</p>
+				<p class="member_item_birth">2006.11.6</p>
+				<p class="member_item_birth">ライトブルー</p>
+				<p class="member_item_birth">#HAPPYACE</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/ace_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@su.___.uu"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513578"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/ace1106"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ace.webp">
@@ -111,14 +107,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACO</p>
-				<p class="member_item_birth">BIRTH  5.30</p>
+				<p class="member_item_birth">2004.5.30</p>
+				<p class="member_item_birth">オレンジ</p>
+				<p class="member_item_birth">#ア国民</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/aco_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513580"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/acowhsp"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-aco.webp">
@@ -126,15 +119,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ALLY</p>
-				<p class="member_item_birth">BIRTH  4.17</p>
+				<p class="member_item_birth">2000.4.17</p>
+				<p class="member_item_birth">ブルー</p>
+				<p class="member_item_birth">#OMOIYALLY</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/ally_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513581"><img src="images/showroom.webp" /></a></li>
-					<li><a href="https://youtu.be/aWSWfOSLCZU?si=5Q3jdAqTql9uYjbX"><img src="images/youtube.webp" /></a></li>
+					<li><a href="https://lit.link/ALLYWHITESCORPION"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ally.webp">
@@ -142,16 +131,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">AOI</p>
-				<p class="member_item_birth">BIRTH  10.13</p>
+				<p class="member_item_birth">2024.10.13</p>
+				<p class="member_item_birth">グリーン</p>
+				<p class="member_item_birth">#あおいすこーぴおん</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@___aoi_s2"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513582"><img src="images/showroom.webp" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
+					<li><a href="https://lit.link/AOIscorpion"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-aoi.webp">
@@ -159,15 +143,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">CHOCO</p>
-				<p class="member_item_birth">BIRTH  12.27</p>
+				<p class="member_item_birth">2006.12.27</p>
+				<p class="member_item_birth">ライトピンク</p>
+				<p class="member_item_birth">#CHOCOにちょこっと伝えたい</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/choco_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@choco._.nyan"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513583"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/choco1227"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-choco.webp">
@@ -175,14 +155,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">COCO</p>
-				<p class="member_item_birth">BIRTH  3.18</p>
+				<p class="member_item_birth">2006.3.18</p>
+				<p class="member_item_birth">イエロー</p>
+				<p class="member_item_birth">#COCOにおいで</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/coco_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513584"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/coco0318"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-coco.webp">
@@ -190,15 +167,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">HANNA</p>
-				<p class="member_item_birth">BIRTH  12.17</p>
+				<p class="member_item_birth">2008.12.17</p>
+				<p class="member_item_birth">レッド</p>
+				<p class="member_item_birth">#ハンナ親衛隊</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/hanna_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@hanna_whsp_1217"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513585"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/hannadayo"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-hanna.webp">
@@ -206,16 +179,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">MOMO</p>
-				<p class="member_item_birth">BIRTH  12.7</p>
+				<p class="member_item_birth">2005.12.7</p>
+				<p class="member_item_birth">ライトグリーン</p>
+				<p class="member_item_birth"></p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513586"><img src="images/showroom.webp" /></a></li>
-					<li><a href="https://radiotalk.jp/program/93139"><img src="images/gocha.webp" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
+					<li><a href="https://lit.link/whsp1207momo><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-momo.webp">
@@ -223,15 +191,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NATSU</p>
-				<p class="member_item_birth">BIRTH  7.16</p>
+				<p class="member_item_birth">2004.7.16</p>
+				<p class="member_item_birth">パープル</p>
+				<p class="member_item_birth">#ImNATSUfriend</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/natsu_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@imnatsuwhsp"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513587"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/whsp0716natsu"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-natsu.webp">
@@ -239,15 +203,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NAVI</p>
-				<p class="member_item_birth">BIRTH  3.20</p>
+				<p class="member_item_birth">2003.3.20</p>
+				<p class="member_item_birth">バイオレット</p>
+				<p class="member_item_birth"></p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/navi_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@your_papillon.f"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513588"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/NAVI"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-navi.webp">
@@ -255,15 +215,11 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NICO</p>
-				<p class="member_item_birth">BIRTH  5.23</p>
+				<p class="member_item_birth">2004.5.23</p>
+				<p class="member_item_birth">ピンク</p>
+				<p class="member_item_birth"></p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.webp" /></a></li>
-					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
-					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://www.tiktok.com/@smile_.nico"><img src="images/tiktok.webp" /></a></li>
-				</ul>
-				<ul class="member_icon">
-					<li><a href="https://www.showroom-live.com/room/profile?room_id=513589"><img src="images/showroom.webp" /></a></li>
+					<li><a href="https://lit.link/NICO0523"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-nico.webp">
