--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<li><a href="https://lit.link/ace1106"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ace.webp">
+			  <img class="member_img" src="images/member-ace.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -114,7 +114,7 @@
 					<li><a href="https://lit.link/acowhsp"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aco.webp">
+			  <img class="member_img2" src="images/member-aco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -126,7 +126,7 @@
 					<li><a href="https://lit.link/ALLYWHITESCORPION"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ally.webp">
+			  <img class="member_img" src="images/member-ally.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -138,7 +138,7 @@
 					<li><a href="https://lit.link/AOIscorpion"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aoi.webp">
+			  <img class="member_img2" src="images/member-aoi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -150,7 +150,7 @@
 					<li><a href="https://lit.link/choco1227"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-choco.webp">
+			  <img class="member_img" src="images/member-choco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -162,7 +162,7 @@
 					<li><a href="https://lit.link/coco0318"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-coco.webp">
+			  <img class="member_img2" src="images/member-coco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -174,7 +174,7 @@
 					<li><a href="https://lit.link/hannadayo"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-hanna.webp">
+			  <img class="member_img" src="images/member-hanna.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -186,7 +186,7 @@
 					<li><a href="https://lit.link/whsp1207momo><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-momo.webp">
+			  <img class="member_img2" src="images/member-momo.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -198,7 +198,7 @@
 					<li><a href="https://lit.link/whsp0716natsu"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-natsu.webp">
+			  <img class="member_img" src="images/member-natsu.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -210,7 +210,7 @@
 					<li><a href="https://lit.link/NAVI"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-navi.webp">
+			  <img class="member_img2" src="images/member-navi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -222,7 +222,7 @@
 					<li><a href="https://lit.link/NICO0523"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-nico.webp">
+			  <img class="member_img" src="images/member-nico.jpg">
 		  </div>
 	  </article>
  	  <hr>
