--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<p class="member_item_birth">ライトグリーン</p>
 				<p class="member_item_birth"></p>
 				<ul class="member_icon">
-					<li><a href="https://lit.link/whsp1207momo><img src="images/web.webp" /></a></li>
+					<li><a href="https://lit.link/whsp1207momo"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-momo.jpg">
