--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<li><a href="https://lit.link/acowhsp"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aco.jpg">
+			  <img class="member_img" src="images/member-aco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -138,7 +138,7 @@
 					<li><a href="https://lit.link/AOIscorpion"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aoi.jpg">
+			  <img class="member_img" src="images/member-aoi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -162,7 +162,7 @@
 					<li><a href="https://lit.link/coco0318"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-coco.jpg">
+			  <img class="member_img" src="images/member-coco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -186,7 +186,7 @@
 					<li><a href="https://lit.link/whsp1207momo"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-momo.jpg">
+			  <img class="member_img" src="images/member-momo.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -210,7 +210,7 @@
 					<li><a href="https://lit.link/NAVI"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-navi.jpg">
+			  <img class="member_img" src="images/member-navi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
