--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				<p class="member_item_name">NAVI</p>
 				<p class="member_item_birth">2003.3.20</p>
 				<p class="member_item_birth">バイオレット</p>
-				<p class="member_item_birth"></p>
+				<p class="member_item_birth">#NAVIootd</p>
 				<ul class="member_icon">
 					<li><a href="https://lit.link/NAVI"><img src="images/web.webp" /></a></li>
 				</ul>
