--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 				<p class="member_item_birth">2024.10.13</p>
 				<p class="member_item_birth">グリーン</p>
 				<p class="member_item_birth">#あおいすこーぴおん</p>
-				<ul class="member_icon2">
+				<ul class="member_icon">
 					<li><a href="https://lit.link/AOIscorpion"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-aoi.jpg">
+			  <img class="member_img2" src="images/member-aoi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -158,11 +158,11 @@
 				<p class="member_item_birth">2006.3.18</p>
 				<p class="member_item_birth">イエロー</p>
 				<p class="member_item_birth">#COCOにおいで</p>
-				<ul class="member_icon2">
+				<ul class="member_icon">
 					<li><a href="https://lit.link/coco0318"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-coco.jpg">
+			  <img class="member_img2" src="images/member-coco.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -182,11 +182,11 @@
 				<p class="member_item_birth">2005.12.7</p>
 				<p class="member_item_birth">ライトグリーン</p>
 				<p class="member_item_birth"></p>
-				<ul class="member_icon2">
+				<ul class="member_icon">
 					<li><a href="https://lit.link/whsp1207momo"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-momo.jpg">
+			  <img class="member_img2" src="images/member-momo.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -206,11 +206,11 @@
 				<p class="member_item_birth">2003.3.20</p>
 				<p class="member_item_birth">バイオレット</p>
 				<p class="member_item_birth">#NAVIootd</p>
-				<ul class="member_icon2">
+				<ul class="member_icon">
 					<li><a href="https://lit.link/NAVI"><img src="images/web.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-navi.jpg">
+			  <img class="member_img2" src="images/member-navi.jpg">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
